# diff_tracer

./: .gitignore  README.md  go.mod  pyproject.toml  setup.py
.github/workflows/: ci.yaml
cmd/diff-tracer/: formatter.go  main.go
diff-tracer/: diff_match_patch.py  fastapi.py  main.py  utils.py  view.html
diff_tracer/: __init__.py  diff_match_patch.py  fastapi.py  fastapi_example.py  main.py  utils.py
go/: go.sum
go/cmd/diff-tracer/: formatter.go
tests/: test_compare_async.py  test_utils.py
