[tool.poetry]
name = "diff-tracer"
version = "0.0.1"
description = ""
authors = ["Beto Figueiredo"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12.2"
pydantic = "^2.6.4"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
pylint = "^3.1.0"
ruff = "^0.3.4"
mypy = "^1.13.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
setuptools = "^75.5.0"
wheel = "^0.45.0"
twine = "^5.1.1"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true
check_untyped_defs = true
incremental = false
strict = true
warn_return_any = false
warn_redundant_casts = true
warn_unreachable = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]


[tool.taskipy.tasks]
test = { cmd = "python3 -m pytest -vv", help = "runs all unit tests" }
mypy = { cmd = "mypy", help = "runs mypy" }

[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
